Uploaded image for project: 'JDK'
  1. JDK
  2. JDK-8290780

AArch64: Crash in c2 nmethod running RunThese30M.java

    XMLWordPrintable

Details

    • b08
    • aarch64
    • linux
    • Verified

    Description

      # SIGSEGV (0xb) at pc=0x0000ffff55964edc, pid=2843096, tid=2850366
      #
      # JRE version: Java(TM) SE Runtime Environment (20.0+7) (fastdebug build 20-ea+7-377)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 20-ea+7-377, compiled mode, sharing, compressed oops, compressed class ptrs, g1 gc, linux-aarch64)
      # Problematic frame:
      # J 91101 c2 java.io.ObjectOutputStream.enableReplaceObject(Z)Z java.base@20-ea (47 bytes) @ 0x0000ffff55964edc [0x0000ffff55964e80+0x000000000000005c]

      Attachments

        1. 8290780.txt
          1.0 kB
        2. hs_err_pid2843096.log
          164 kB
        3. hs_err_pid3138936.log
          175 kB
        4. patch.txt
          2 kB

        Issue Links

          Activity

            People

              aph Andrew Haley
              dlong Dean Long
              Votes:
              0 Vote for this issue
              Watchers:
              7 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: