8290780: AArch64: Crash in c2 nmethod running RunThese30M.java